Agrugue una linea

--- a/main.tex
+++ b/main.tex
@@ -71,7 +71,7 @@ int main()
     return 0;
 }
 \end{lstlisting}
-
+Linea insertada porque ajá
 A continuación se presenta el logo de C++ Figura (\ref{fig:cpplogo})
 
 \begin{figure}[h]
